 * Improvements in Blu-Ray module, notably for multiple video tracks support
 * Important improvements and rewrite of the v4l2 access module
 * HTTP: support for Internationalized Domain Names
 * Microsoft Smooth Streaming support (H264 and VC1) developed by Viotech.net
 * NTSC EIA-608 closed caption input support via V4L2 VBI devices
 * Add support for VNC/rfb in view only mode

Demuxers:
 * MP4: partial support for fragmented MP4
 * Vorbis: better support for metadata and cover art
 * AVI: better support for tags and extended metadata
 * Support for FLAC, Atrac and some ADPCM in AVI
 * Support for DV data type 1 in AVI and 12 bits DV Audio
 * Support for total number of tracks in major container
 * Support for Cook and Atrac in MKV
 * AVI: support for files produced by Nikon cameras
 * Support for more MJPEG streams
 * Add support for liveleak streams

Audio output:
 * Windows Audio Session API audio output support
 * OpenBSD sndio audio output support
 * Important improvements on the Android OpenSL ES module
 * Android AudioTrack audio output support
 * OS X Auhal output support for 6.1 and 7.1 playback and layouts
 * Rewrite of OSS module to support OSSv4
 * OS X Auhal output support for multi-buffer output devices
   This fix was facilitated through a hardware lending by TEAC Europe GmbH
   distributing such devices under the brand "TASCAM" (US-122, US-144, etc.).
 * Rewrite of AudioQueue module for iOS (and OS X)

Audio Filters:
 * new remapping channel filter
 * new filter to enhance stereo effect by mono suppression and delay effect
 * new VSXu visualization plugin

Video Outputs:
 * DecklinkOutput: New module using Blackmagic cards
 * OpenGL: use glsl instead of ARB to do the YUV->RGB conversions
 * OpenGLES: add support for color conversation shaders on Android and iOS
 * Fix the power management issue on Windows for standby management

Video Filters:
 * new anaglyph video filter which transforms side by side 3D video streams in