@@ -234,6 +234,7 @@ modules/access/rar/access.c
 modules/access/rar/rar.c
 modules/access/rar/rar.h
 modules/access/rar/stream.c
+modules/access/rdp.c
 modules/access/rtp/input.c
 modules/access/rtp/rtp.c
 modules/access/rtp/rtp.h
